# LearnTerminalAgent

./: .env.example  .gitignore  CHANGELOG.md  FILE_STRUCTURE_README.md  LICENSE  README.md  agent.ps1  pyproject.toml  requirements.txt  run.bat  run_agent.py  test_agent_stream.bat  test_stream_output.py
config/: README.md  config.json
dev_tests/: SKILLS_COMPLETION_REPORT.md  SKILLS_QUICK_REFERENCE.md  SKILLS_SUMMARY.md  demo_skills_usage.py  test_agent_tools.py  test_bash_tool.py  test_code_file_search.py  test_cross_directory.py  test_e2e_agent.py  test_import_order.py  test_improved_prompt.py  test_logging.py  test_memory_retrieval.py  test_memory_storage.py  test_memorywords.py  test_model_diagnostic.py  test_persional.py  test_real_scenario.py  test_responsiveness.py  test_skills_simple.py  test_skills_validation.py  test_startup.py  verify_workspace.py
docs/: API_KEY_MASKING.md  CONFIG_FILE_GUIDE.md  DEV_FILES_ORGANIZATION_GUIDE.md  DEV_FILES_ORGANIZATION_PLAN.md  HOW_TO_USE.md  INDEX.md  LOG_FILE_GUIDE.md  PROJECT_LOGIC_WORKFLOW.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  STREAM_FIX_NOTES.md  STREAM_OUTPUT_GUIDE.md  help.md
docs/dev/: AGENT_RESPONSE_OPTIMIZATION_PLAN.md  AGENT_TOOL_CALLING_FIX.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_OPTIMIZATION_SUMMARY.md  LOGGING_SUMMARY.md  LOG_FILE_GUIDE.md  LOG_SYSTEM_QUIET_MODE_SUMMARY.md  (+16 more)
prompts/: agent_prompt_zh.md  subagent_prompt_zh.md
scripts/: view_logs.py
skills/: README.md
src/: README.md
tests/: README.md  demo_rich_output.py  test_display_upgrade.py  test_full_flow.py  test_imports.py  test_regret_medicine.py  test_rich_output.py  test_simple_loading.py  test_tool_loading.py  test_tool_logger.py  test_workspace.py  test_workspace_e2e.py  test_workspace_integration.py
(+74 files in other folders)
